daikon/PowerOfFour/result.txt
./PowerOfFour.java:2: error: ')' expected
    /*@ ensures (\result == true)  ==>  (\old(n) is a power of 2); */
                                                ^
./PowerOfFour.java:2: error: Incorrectly formed or terminated ensures statement near here
    /*@ ensures (\result == true)  ==>  (\old(n) is a power of 2); */
                                                 ^
2 errors
